--- a/style.css
+++ b/style.css
@@ -2,45 +2,45 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css');
 
-*{
+* {
     margin: 0;
 }
 
 body::-webkit-scrollbar {
-    width: 12px;  
-    height: 12px;             
+    width: 12px;
+    height: 12px;
 }
 
 body::-webkit-scrollbar-track {
-    background: #1083e970; 
+    background: #1083e970;
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #026fcfc0;  
+    background-color: #026fcfc0;
 }
 
-.coluna{
+.coluna {
     display: flex;
     flex-direction: column;
 }
 
-.dis{
+.dis {
     display: flex;
 }
 
-.spa{
+.spa {
     justify-content: space-between;
 }
 
-.spaa{
+.spaa {
     justify-content: space-around;
 }
 
-.ali{
+.ali {
     align-items: center;
 }
 
-.cen{
+.cen {
     justify-content: center;
 }
 
@@ -50,13 +50,13 @@ body::-webkit-scrollbar-thumb {
 
 /* banner */
 
-.banner{
+.banner {
     width: 100%;
     height: 270px;
     background-color: #c4c4c415;
 }
 
-.content-banner{
+.content-banner {
     width: 40%;
     margin-left: 15%;
     height: 230px;
@@ -65,16 +65,16 @@ body::-webkit-scrollbar-thumb {
     margin-top: 15px;
 }
 
-.content-banner img{
+.content-banner img {
     width: 40%;
 }
 
-.fotobanner{
+.fotobanner {
     width: 370px;
     height: 170px;
 }
 
-.fotobanner img{
+.fotobanner img {
     width: 100%;
 }
 
@@ -101,10 +101,10 @@ body::-webkit-scrollbar-thumb {
     border: none;
     border-radius: 5px;
     background-color: #0270CF;
-    
+
 }
 
-.inputs input{
+.inputs input {
     width: 300px;
     height: 42px;
     border: none;
@@ -121,22 +121,21 @@ body::-webkit-scrollbar-thumb {
     margin-right: 20%;
 }
 
-.inputs h2{
+.inputs h2 {
     font-size: 17px;
     margin-top: 27px;
 }
 
-.inputs p{
+.inputs p {
     font-size: 11px;
 }
 
-.login img{
+.login img {
     width: 27%;
 }
 
-.login{
+.login {
     width: 100%;
-    height: 285px;
     font-family: 'Montserrat';
     margin-bottom: 20px;
 }
@@ -145,7 +144,7 @@ body::-webkit-scrollbar-thumb {
 
 
 .cardespecialidade1 {
-    width:10%;
+    width: 10%;
     height: 85px;
     border-radius: 6px;
     background-image: url("../assets/img/Foto\ card\ consulta.png");
@@ -155,20 +154,20 @@ body::-webkit-scrollbar-thumb {
     font-family: 'Montserrat';
 }
 
-.especialidades img{
+.especialidades img {
     width: 20%;
     margin-top: 20px;
 }
 
-.especialidades{
+.especialidades {
     margin-bottom: 35px;
 }
 
-.content-especialidades{
-    width: 96%;
+.content-especialidades {
+    width: 94%;
 }
 
-.content-especialidades img{
+.content-especialidades img {
     border-radius: 8px;
 }
 
@@ -182,33 +181,28 @@ body::-webkit-scrollbar-thumb {
 
 /* footer */
 
-footer{
+footer {
     width: 100%;
     height: 100px;
-    background-image: url("../assets/img/—Pngtree—vector\ white\ background\ with\ abstract_991007.png");
+    background-image: url(./img/fundofooter.png);
     background-size: 50%;
     font-family: 'Montserrat';
     color: #1b1d1f;
 }
 
-footer h4{
+footer h4 {
     width: 260px;
 }
 
-.logoFooter{
+.logoFooter {
     width: 200px;
 }
 
-.contatos{
+.contatos {
     width: 180px;
 }
 
-.contatos img{
-    width: 20px;
-    margin-right: 10px;
-}
-
-.contato{
+.contato {
     height: 80px;
     text-align: center;
 }
@@ -219,7 +213,7 @@ footer h4{
 
 /* header */
 
-.header{
+.header {
     width: 80%;
     height: 100%;
     margin: auto;
@@ -231,7 +225,7 @@ footer h4{
     background-color: #1b1d1f;
 }
 
-.header a{
+.header a {
     margin-left: 30px;
     text-decoration: none;
     color: rgb(17, 17, 17);
@@ -239,291 +233,81 @@ footer h4{
 
 /* content principal */
 
-.opcoes button{
-    font-family: 'montserrat';
-    font-size: 15px;
-    width: 165px;
-    height: 45px;
-    border: none;
-    border-radius: 7px;
-    background-color: #0270CF;
-    outline: 0;
-    color: white;
-    margin-right: 15px;
-}
-
-.opcoes{
-    font-family: 'montserrat';
-    color: rgb(26, 26, 26);
-    width: 100%;
-    height: 250px;
-    margin-bottom: 65px;
-}
-
-.content-principal-adm img{
-    width: 23.8%;
-}
-
-.opcoes h1{
-    margin-bottom: 20px;
-    margin-right: 15px;
-}
-
-/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-
-/* tela preenchidas  */
-
-.inputs-cadastro{
-    width: 70%;
-    height: 410px;
-    padding-bottom: 30px;
-}
-
-.inputs-cadastro-paciente{
-    width: 70%;
-    height: 300px;
-    padding-bottom: 30px;
-}
-
-.contentCadastroPaciente {
-    width: 60%;
-}
-
-.input{
-    width: 280px;
+.input-table {
+    width: 150px;
     height: 35px;
-    border: none;
-    border-radius: 5px;
-    outline: 0;
-    background-color: #c4c4c481;
-    padding-left: 20px;
-    font-size: 13px;
-    font-family: 'Montserrat';
-}
-
-.select{
-    width: 300px;
-    height: 35px;
-    border: none;
-    border-radius: 5px;
-    outline: 0;
-    background-color: #c4c4c481;
-    padding-left: 20px;
-    font-size: 13px;
-    font-family: 'Montserrat';
-}
-
-.select2{
-    width: 280px;
-}
-
-.inputs-cadastro button {
-    width: 100px;
-    height: 35px;
-    font-family: 'Montserrat';
-    font-size: 13px;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    background-color: #0270CF;
-}
-.inputs-cadastro-paciente button {
-    width: 130px;
-    height: 35px;
-    font-family: 'Montserrat';
-    font-size: 13px;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    background-color: #0270CF;
-}
-
-.content-principal-cadastro {
-    align-items: flex-end;
-    font-family: 'montserrat';
-}
-
-.content-principal-cadastroUser {
-    align-items: flex-end;
-    font-family: 'montserrat';
-}
-
-.content-principal-cadastro img{
-    width: 400px;
-    height: 280px;
-}
-
-.imagemCadastro{
-    width: 400px;
-    height: 280px;
-}
-
-/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-
-/* listar consultas adm  */
-
-.header input{
-    width: 280px;
-    height: 35px;
-    border: none;
-    border-radius: 5px;
-    outline: 0;
-    background-color: #c4c4c481;
-    padding-left: 20px;
-    font-size: 13px;
-    font-family: 'Montserrat';
-}
-
-.buttonLista{
-    width: 100%;
+    background-color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: transparent;
-    border: none;
     font-family: 'montserrat';
-}
-.pesquisaListar img{
-    position: absolute;
-    margin-left: 260px;
-}
-
-.ListaPrincipal{
-    width: 90%;
-    height: 100%;
-    border-radius: 8px;
-    background-image: url("../assets/img/Background\ listar\ adm.png");
-    background-size: cover;
-    font-family: 'montserrat';
-    color: white;
-    padding: 15px;
-    margin-top: 30px;
-}
-
-.ListaPrincipal table{
-    width: 100%;
-    border-spacing:10px;
-}
-
-.its{
-    background-color: rgba(255, 255, 255, 0.800);
     border-radius: 5px;
-    color: #1b1d1f;
-    font-size: 14px;
-    text-overflow: ellipsis;
-    height: 27px;
-    text-align: center;
 }
 
-/* ///////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-
-/* tela consulta medico */
-
-.content-consulta{
-    width: 200px;
-    height: 210px;
-    background-image: url("../assets/img/Foto\ card\ consulta.png");
-    color: white;
-    font-family: 'montserrat';
-    font-size: 19px;
-    padding-left: 20px;
+.inputs-data {
+    width: 500px;
+    height: 70px;
+    background-image: url(./img/Foto\ card\ consulta.png);
     border-radius: 8px;
-    margin-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around
+}
+
+
+.table-adm{
+    width: 500px;
+    padding: 10px;
+    height: 350px;
+    background-image: url(./img/Foto\ card\ consulta.png);
+    background-size: cover;
+    border-radius: 8px;
+}
+
+.content-principal-adm table img {
+    width: 25px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.content-principal-adm {
+    padding-left: 10%;
+    height: 69vh;
+}
+
+.content-perfil {
+    padding-left: 10%;
+    height: 69vh;
+}
+
+.imgPerfil {
+    width: 150px;
+}
+
+.opcoes h1 {
     margin-bottom: 20px;
+    margin-right: 15px;
 }
 
-.content-principal-medico{
-    width: 100%;
-    justify-content: flex-end;
-    margin-top: 30px;
-    min-height: 413px;
-    align-items: flex-end;
+.imgBanner {
+    transform: scaleX(-1);
 }
 
-.fotoMedico{
-    width: 310px;
-    height: 190px;
+.header h4 {
+    margin-left: 15px;
 }
 
-.div-principal-consulta{
-    width: 71.3%;
-    min-height: 413px;
-    flex-wrap: wrap;
+.content-perfil {
+    font-family: 'montserrat';
 }
 
-.buttonEditar{
-    width: 100px;
-    margin-left: 60%;
+.table-perfil {
+    width: 350px;
+    height: 200px;
+    background-image: url(./img/Foto\ card\ consulta.png);
+    background-size: cover;
+    border-radius: 10px;
     color: white;
-    font-size: 10px;
-    background-color: Transparent;
-    background-repeat:no-repeat;
     font-family: 'montserrat';
-    border: none;
-    cursor:pointer;
-    overflow: hidden;        
-}
-
-.linhaConsulta{
-    margin-bottom: 10px;
-}
-
-.linhaConsulta img{
-    margin-right: 15px;
-}
-
-.linhaDescricao img{
-    margin-right: 15px;
-}
-
-.linhaDescricao{
-    align-items: flex-start;
-    width: 190px;
-    height: 100%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.linhaDescricao p {
-    font-size: 14px;
-}
-
-.inputDescricao{
-    width: 67%;
-    height: 18px;
-    border-radius: 3px;
-    outline: none;
-    border: none;
-    font-family: 'montserrat';
-    padding-left: 8px;
-    font-size: 11px;
-    background-color: #f3f3f3;
-}
-
-.inputblock{
-    display: none;
-}
-
-.inputnone{
-    display: block;
-    margin-top: 5px;
-}
-
-.bntDesc{
-    width: 50px;
-    height: 37px;
-    outline: none;
-    text-align: center;
-    border: 0;
-    border-radius: 3px;
-    margin-left:  6px;
-    font-family: 'montserrat';
-    color: #333333;
-    background-color: #f3f3f3;
-}
-
-.trash{
-    width: 15px;
-    height: 15px;
-    margin-left: 5px;
+    padding: 10px;
 }
